# electronic_sentinel

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
